# pdf-compiler

./: .gitignore  PATCHNOTES.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  version-bump.yml
docs/: font-reconciliation.md
examples/: minimal.yaml  report.yaml
examples_content/: financials.md  intro.md
src/pdf_compiler/: __init__.py  __main__.py  assemble.py  cache.py  cli.py  context.py  images.py  interpolate.py  lengths.py  loader.py  md_ast.py  numbering.py  page_range.py  pipeline.py  pipeline_impl.py  reconcile.py  spec.py  util.py  validate.py  watcher.py
src/pdf_compiler/layout/: pack.py
src/pdf_compiler/render/: html.py
src/pdf_compiler/render/templates/: base.css  gallery.html  header.html  markdown.html  title.html  toc.html
src/pdf_compiler/sections/: __init__.py  _common.py  base.py  header.py  images.py  markdown_doc.py  pdf_ref.py  title.py  toc.py
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_assemble.py  test_cache.py  test_images.py  test_interpolate.py  test_layout_pack.py  test_lengths.py  test_md_ast.py  test_numbering.py  test_page_range.py  test_reconcile.py  test_render.py  test_sections.py  test_spec.py  test_toc_links.py
