[project]
name = "pdf-compiler"
version = "0.1.0"
description = "Stitch large PDFs from a YAML spec: title pages, ToC, markdown, image galleries"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "ruamel.yaml>=0.18",
    "markdown-it-py>=3.0",
    "jinja2>=3.1",
    "weasyprint>=62.0",
    "pikepdf>=9.0",
    "pillow>=10.3",
    "rectpack>=0.2.2",
    "blake3>=0.4",
    "watchdog>=4.0",
    "pdfplumber>=0.11",
]

[project.scripts]
pdfc = "pdf_compiler.cli:app"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "pdf_compiler"
module-root = "src"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "syrupy>=4.6",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:weasyprint.*",
    "ignore::DeprecationWarning:pdfplumber.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src/pdf_compiler"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
